--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 build
 Gemfile.lock
+ext/natalie_parser/*.h
+ext/natalie_parser/*.o
+ext/natalie_parser/*.log
+ext/natalie_parser/*.so
+ext/natalie_parser/Makefile
 
 # Editor tools
 .ccls
