--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ ext/natalie_parser/*.h
 ext/natalie_parser/*.o
 ext/natalie_parser/*.log
 ext/natalie_parser/*.so
+ext/natalie_parser/*.bundle
 ext/natalie_parser/Makefile
 
 # Editor tools
@@ -13,3 +14,4 @@ compile_commands.json
 tags
 .gdb_history
 .vscode
+.cache
