--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ ext/natalie_parser/*.log
 ext/natalie_parser/*.so
 ext/natalie_parser/*.bundle
 ext/natalie_parser/Makefile
+test/support/fragments.hpp
 *.gem
 
 # Editor tools
